--- a/template/ayxin01/index.htm
+++ b/template/ayxin01/index.htm
@@ -113,7 +113,7 @@
 	 </div>
       <div class="g_box2">
         <div class="t_1">
-          <h3>图文推荐</h3>
+          <h3>Рекомендуем картинки</h3>
         </div>
         <ul class="b_box3">
 		<!--{iCMS:article:list loop="true" pic="true" row="16" start="4" sub="all" orderby="hot" startdate="-180 day"}-->
