--- a/template/iCMS/mobile/user/manage/category.htm
+++ b/template/iCMS/mobile/user/manage/category.htm
@@ -29,7 +29,7 @@
 	<div class="alert alert-danger mt10" role="alert">删除后,记得更新哦!~~~~</div>
 </div>
 <style>
-.info { text-align: left; color: #999; }
+.info { text-align: left; color: #8395a7; }
 .contents{padding: 10px!important;}
 </style>
 <script type="text/javascript">
