--- a/template/topicApp/topic.htm
+++ b/template/topicApp/topic.htm
@@ -22,7 +22,7 @@
 <body class="articleApp" i="<!--{$iCMS.APP.NAME}-->">
     <!--{include file="./header.htm"}-->
     <div class="body clearfix">
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="main-col">
                 <ul class="breadcrumb">
                     <li><a href="<!--{$site.url}-->">首页</a></li>
@@ -237,7 +237,7 @@
                 <div class="clearfix"></div>
                 <div class="mod-box pictxt">
                     <div class="mod-title">
-                        <h3 class="mod-txt">图文推荐</h3>
+                        <h3 class="mod-txt">Рекомендуем картинки</h3>
                     </div>
                     <div class="mod-content">
                         <!--{iCMS:topic:list loop="true" pic="true" sub="all" row="8" cid="$category.cid"}-->
