--- a/template/videoApp/video.index.htm
+++ b/template/videoApp/video.index.htm
@@ -17,7 +17,7 @@
 <body class="categoryApp" i="<!--{$iCMS.APP.NAME}-->">
     <!--{include file="./header.htm"}-->
     <div class="body clearfix ">
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="focus">
                 <div class="focus-left fl">
                     <div class="carousel-box">
@@ -66,10 +66,10 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="body-wrap r5 filter-wrap">
+        <div class="body-wrap r3 filter-wrap">
             <div class="mod_filter">
                 <div class="filter_item filter_item_v1">
-                    <h3 class="filter_title"><i></i>特色推荐</h3>
+                    <h3 class="filter_title"><i></i>Рекомендуем</h3>
                     <ul class="filter_list">
                         <!--{iCMS:tag:list loop="true" row="10" sub="all" orderby="hot" cid="$category.cid" pid="1"}-->
                         <li>
@@ -96,7 +96,7 @@
                     </ul>
                 </div>
                 <div class="filter_item filter_item_v3">
-                    <h3 class="filter_title"><i></i>地区</h3>
+                    <h3 class="filter_title"><i></i>Страна</h3>
                     <ul class="filter_list">
                         <!--{iCMS:prop:list loop="true" field="area" sapp="video"}-->
                         <li>
@@ -123,7 +123,7 @@
                     </ul>
                 </div>
                 <div class="filter_item filter_item_v5">
-                    <h3 class="filter_title"><i></i>年代</h3>
+                    <h3 class="filter_title"><i></i>Год выпуска</h3>
                     <ul class="filter_list">
                         <!--{iCMS:prop:list loop="true" field="year" sapp="video" }-->
                         <li>
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="main-col">
                 <div class="tabs-wrap">
                     <div class="tabs-head">
@@ -304,7 +304,7 @@
                 <div class="clearfix"></div>
                 <div class="mod-box pictxt">
                     <div class="mod-title">
-                        <h3 class="mod-txt">图文推荐</h3>
+                        <h3 class="mod-txt">Рекомендуем картинки</h3>
                     </div>
                     <div class="mod-content">
                         <!--{iCMS:video:list loop="true" pic="true" sub="all" row="8" cid="$category.cid"}-->
