--- a/app/admincp/ui/admincp.css
+++ b/app/admincp/ui/admincp.css
@@ -72,7 +72,7 @@ body { background-color: #f0f5f7; color: #67809F; }
 .ui-widget-overlay { position: fixed; }
 .iCMS_dialog .ui-dialog-content .chosen-container { position: absolute; }
 .iCMS_dialog .ui-dialog-header { background-color: #333; background-image: -moz-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -ms-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3c3c3c), to(#0a0a0a)); background-image: -webkit-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: -o-linear-gradient(top, #3c3c3c, #0a0a0a); background-image: linear-gradient(top, #3c3c3c, #0a0a0a); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c3c3c', endColorstr='#0a0a0a', GradientType=0); }
-.iCMS_dialog .ui-dialog-header .ui-dialog-close { color: #999; opacity: .4; font-weight: normal; filter: alpha(opacity=40); }
+.iCMS_dialog .ui-dialog-header .ui-dialog-close { color: #8395a7; opacity: .4; font-weight: normal; filter: alpha(opacity=40); }
 .iCMS_dialog .ui-dialog-header .ui-dialog-close:hover, .iCMS_dialog .ui-dialog-header .ui-dialog-close:focus { opacity: 0.7; filter: alpha(opacity=70); }
 
 /* iCMS */
@@ -394,7 +394,7 @@ ul#icons li { cursor: pointer; float: left; list-style: none outside none; margi
 #chat-messages-inner p img { display: inline-block; float: left; vertical-align: middle; width: 28px; height: 28px; margin-top: 6px; }
 #chat-messages-inner .msg-block, #chat-messages-inner p.offline span { background: none repeat scroll 0 0 #FFFFFF; border: 1px solid #cccccc; box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.05); display: block; margin-left: 40px; padding: 10px; position: relative; }
 #chat-messages-inner p.offline span { background: none repeat scroll 0 0 #FFF5F5; }
-#chat-messages-inner .time { color: #999999; font-size: 11px; font-style: italic; }
+#chat-messages-inner .time { color: #8395a7; font-size: 11px; font-style: italic; }
 #chat-messages-inner .msg { display: block; margin-top: 10px; }
 #chat-messages-inner .msg-block:before { border-right: 7px solid rgba(0, 0, 0, 0.1); border-top: 7px solid transparent; border-bottom: 7px solid transparent; content: ""; display: inline-block; left: -7px; position: absolute; top: 11px; }
 #chat-messages-inner .msg-block:after { border-right: 6px solid #ffffff; border-top: 6px solid transparent; border-bottom: 6px solid transparent; content: ""; display: inline-block; left: -6px; position: absolute; top: 12px; }
