--- a/app/admincp/ui/bootstrap/2.3.2/css/datepicker.css
+++ b/app/admincp/ui/bootstrap/2.3.2/css/datepicker.css
@@ -18,7 +18,7 @@
 .datepicker td, .datepicker th { text-align: center; width: 20px; height: 20px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 2px 4px; }
 .datepicker td.day:hover { background: #eeeeee; cursor: pointer; }
 .datepicker td.day.disabled { color: #eeeeee; }
-.datepicker td.old, .datepicker td.new { color: #999999; }
+.datepicker td.old, .datepicker td.new { color: #8395a7; }
 .datepicker td.active, .datepicker td.active:hover { color: #ffffff; background-color: #006dcc; background-image: -moz-linear-gradient(top, #0088cc, #0044cc); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc)); background-image: -webkit-linear-gradient(top, #0088cc, #0044cc); background-image: -o-linear-gradient(top, #0088cc, #0044cc); background-image: linear-gradient(to bottom, #0088cc, #0044cc); background-repeat: repeat-x;  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
 border-color: #0044cc #0044cc #002a80; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);  *background-color: #0044cc;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
@@ -39,7 +39,7 @@ color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
 .datepicker td span.active:hover, .datepicker td span.active:focus, .datepicker td span.active:active, .datepicker td span.active.active, .datepicker td span.active.disabled, .datepicker td span.active[disabled] { color: #ffffff; background-color: #0044cc;  *background-color: #003bb3;
 }
 .datepicker td span.active:active, .datepicker td span.active.active { background-color: #003399 \9; }
-.datepicker td span.old { color: #999999; }
+.datepicker td span.old { color: #8395a7; }
 .datepicker th.switch { width: 145px; }
 .datepicker th.next, .datepicker th.prev { font-size: 21px; }
 .datepicker thead tr:first-child th { cursor: pointer; }
