--- a/app/admincp/ui/editor.md/lib/codemirror/theme/lesser-dark.css
+++ b/app/admincp/ui/editor.md/lib/codemirror/theme/lesser-dark.css
@@ -39,7 +39,7 @@ Ported to CodeMirror by Peter Kroon
 .cm-s-lesser-dark span.cm-attribute {color: #00c;}
 .cm-s-lesser-dark span.cm-header {color: #a0a;}
 .cm-s-lesser-dark span.cm-quote {color: #090;}
-.cm-s-lesser-dark span.cm-hr {color: #999;}
+.cm-s-lesser-dark span.cm-hr {color: #8395a7;}
 .cm-s-lesser-dark span.cm-link {color: #00c;}
 .cm-s-lesser-dark span.cm-error { color: #9d1e15; }
 
