--- a/app/admincp/ui/editor.md/lib/codemirror/theme/solarized.css
+++ b/app/admincp/ui/editor.md/lib/codemirror/theme/solarized.css
@@ -83,7 +83,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 .cm-s-solarized .cm-link { color: #93a1a1; cursor: pointer; }
 .cm-s-solarized .cm-special { color: #6c71c4; }
 .cm-s-solarized .cm-em {
-  color: #999;
+  color: #8395a7;
   text-decoration: underline;
   text-decoration-style: dotted;
 }
