--- a/app/admincp/ui/editor.md/lib/codemirror/theme/zenburn.css
+++ b/app/admincp/ui/editor.md/lib/codemirror/theme/zenburn.css
@@ -9,7 +9,7 @@
  */
 
 .cm-s-zenburn .CodeMirror-gutters { background: #3f3f3f !important; }
-.cm-s-zenburn .CodeMirror-foldgutter-open, .CodeMirror-foldgutter-folded { color: #999; }
+.cm-s-zenburn .CodeMirror-foldgutter-open, .CodeMirror-foldgutter-folded { color: #8395a7; }
 .cm-s-zenburn .CodeMirror-cursor { border-left: 1px solid white !important; }
 .cm-s-zenburn { background-color: #3f3f3f; color: #dcdccc; }
 .cm-s-zenburn span.cm-builtin { color: #dcdccc; font-weight: bold; }
