--- a/app/admincp/ui/ueditor/dialogs/image/image.css
+++ b/app/admincp/ui/ueditor/dialogs/image/image.css
@@ -53,7 +53,7 @@
 #upload .placeholder .flashTip { color: #4d7284; font-size: 12px; position: absolute; width: 100%; text-align: center; bottom: 20px; }
 #upload .placeholder .flashTip a { color: #0785d1; text-decoration: none; }
 #upload .placeholder .flashTip a:hover { text-decoration: underline; }
-#upload .placeholder.webuploader-dnd-over { border-color: #999999; }
+#upload .placeholder.webuploader-dnd-over { border-color: #8395a7; }
 #upload .filelist { list-style: none; margin: 0; padding: 0; overflow-x: hidden; overflow-y: auto; position: relative; height: 300px; }
 #upload .filelist:after { content: ''; display: block; width: 0; height: 0; overflow: hidden; clear: both; position: relative; }
 #upload .filelist li { width: 113px; height: 113px; background: url(./images/bg.png); text-align: center; margin: 9px 0 0 9px; *margin: 6px 0 0 6px; position: relative; display: block; float: left; overflow: hidden; font-size: 12px; }
@@ -130,7 +130,7 @@
 #search .searchList li.selected { filter: alpha(Opacity=40); -moz-opacity: 0.4; opacity: 0.4; border: 2px solid #00a0e9; }
 #search .searchList li p { background-color: #eee; margin: 0; padding: 0; position: relative; width: 100%; height: 115px; overflow: hidden; }
 #search .searchList li p img { cursor: pointer; border: 0; }
-#search .searchList li a { color: #999; border-top: 1px solid #F2F2F2; background: #FAFAFA; text-align: center; display: block; padding: 0 5px; width: 105px; height: 32px; line-height: 32px; white-space: nowrap; text-overflow: ellipsis; text-decoration: none; overflow: hidden; word-break: break-all; }
+#search .searchList li a { color: #8395a7; border-top: 1px solid #F2F2F2; background: #FAFAFA; text-align: center; display: block; padding: 0 5px; width: 105px; height: 32px; line-height: 32px; white-space: nowrap; text-overflow: ellipsis; text-decoration: none; overflow: hidden; word-break: break-all; }
 #search .searchList a:hover { text-decoration: underline; color: #333; }
 #search .searchList .clearFloat { clear: both; }
 /* Widgets */
