--- a/app/admincp/ui/ueditor/themes/default/css/ueditor.css
+++ b/app/admincp/ui/ueditor/themes/default/css/ueditor.css
@@ -1160,7 +1160,7 @@ div.edui-box {
     float: right;
     font-size: 20px;
     font-weight: bold;
-    color: #999;
+    color: #8395a7;
     text-shadow: 0 1px 0 #fff;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
