--- a/template/ayxin01/static/css/search.css
+++ b/template/ayxin01/static/css/search.css
@@ -95,7 +95,7 @@ border-bottom: 1px solid #EBEBEB;
 overflow: hidden;
 }
 span.emptyhint {
-	color: #999;
+	color: #8395a7;
 	position: absolute;
 	padding: 3px
 }
