--- a/template/ayxin01/static/css/style.css
+++ b/template/ayxin01/static/css/style.css
@@ -67,11 +67,11 @@ body {
 	margin: 0 auto;
 }
 .top .txl {
-	color: #999;
+	color: #8395a7;
 	line-height: 36px;
 }
 .top .txl a {
-	color: #999;
+	color: #8395a7;
 }
 .top .txl a:hover {
 	color: #f00;
@@ -94,7 +94,7 @@ body {
 .top .txr .nLi span a {
 	display: block;
 	height: 36px;
-	color: #999;
+	color: #8395a7;
 	padding: 0 1px;
 	line-height: 36px;
 }
@@ -410,7 +410,7 @@ body {
 .index_area_c_cl li {
 	float: left;
 	width: 436px;
-	color: #999999;
+	color: #8395a7;
 	line-height: 21px;
 	padding: 5px 0px 5px 0px;
 	border-bottom: 1px dotted #e5e5e5;
@@ -870,7 +870,7 @@ div.slideBox div.tips div.nums a.active {
 }
 .g_list1 li span {
 	float: right;
-	color: #999;
+	color: #8395a7;
 	font-size: 12px;
 	padding-left: 10px;
 	background: #fff;
@@ -912,7 +912,7 @@ div.slideBox div.tips div.nums a.active {
 	padding-left: 5px;
 }
 .g_list3 li em a {
-	color: #999;
+	color: #8395a7;
 }
 .g_list3 li em a:hover {
 	color: #f60;
@@ -1034,7 +1034,7 @@ div.slideBox div.tips div.nums a.active {
 }
 .b_box2 li span {
 	float: right;
-	color: #999;
+	color: #8395a7;
 	font-size: 12px;
 	padding-left: 10px;
 	background: #fff;
@@ -1079,7 +1079,7 @@ div.slideBox div.tips div.nums a.active {
 }
 .b_box4 li span {
 	float: right;
-	color: #999;
+	color: #8395a7;
 	font-size: 12px;
 	padding-left: 10px;
 	background: #fff;
@@ -1249,12 +1249,12 @@ a.backToTop:hover {
 .pages a, .pages span { display: inline-block; padding: 8px 15px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
 .pages span.current, .pages span.page_nowindex { background-color: #ddd; color: #333; }
 .pages a:hover, .pages a:focus { background-color: #f5f5f5 }
-.pages a.page_nowindex { color: #999; cursor: default }
+.pages a.page_nowindex { color: #8395a7; cursor: default }
 .pages a:first-child, .pages span:first-child { border-left-width: 1px; border-bottom-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
 .pages a:last-child, .pages span:last-child { border-top-right-radius: 4px; border-bottom-right-radius: 4px; -moz-border-radius-topright: 4px; -moz-border-radius-bottomright: 4px }
-.pages span.bartext { color: #999; padding: 8px 4px; }
+.pages span.bartext { color: #8395a7; padding: 8px 4px; }
 .pages span.page_select { padding: 3px 10px; }
-.pages span.page_select select { outline: none; border-radius: 5px; height: 30px; border: 1px solid #EDEDED; color: #999; margin: 0px 2px; }
+.pages span.page_select select { outline: none; border-radius: 5px; height: 30px; border: 1px solid #EDEDED; color: #8395a7; margin: 0px 2px; }
 .pages ul li {
 	display: inline-block;
 	border: 1px solid #ccc;
@@ -1285,7 +1285,7 @@ a.backToTop:hover {
 }
 .pages ul li a {
 	display: block;
-	color: #999;
+	color: #8395a7;
 }
 .pages ul li a:hover {
 	color: #fff;
