--- a/template/iCMS/desktop/user/manage/category.htm
+++ b/template/iCMS/desktop/user/manage/category.htm
@@ -26,7 +26,7 @@
     <button class="btn btn-primary btn-lg" type="submit"><i class="fa fa-check"></i> 添加/更新</button>
 </div>
 <style>
-.info { text-align: left; color: #999; }
+.info { text-align: left; color: #8395a7; }
 .form-control { width: 320px !important; }
 .btn-lg { width: 150px !important; }
 </style>
