--- a/template/topicApp/topic.index.htm
+++ b/template/topicApp/topic.index.htm
@@ -24,7 +24,7 @@
 <body class="categoryApp" i="<!--{$iCMS.APP.NAME}-->">
     <!--{include file="./header.htm"}-->
     <div class="body clearfix ">
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="focus">
                 <div class="focus-left fl">
                     <div class="carousel-box">
@@ -73,7 +73,7 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="main-col">
                 <div class="tabs-wrap">
                     <div class="tabs-head">
@@ -234,7 +234,7 @@
                 <div class="clearfix"></div>
                 <div class="mod-box pictxt">
                     <div class="mod-title">
-                        <h3 class="mod-txt">图文推荐</h3>
+                        <h3 class="mod-txt">Рекомендуем картинки</h3>
                     </div>
                     <div class="mod-content">
                         <!--{iCMS:topic:list loop="true" pic="true" sub="all" row="8" cid="$category.cid"}-->
