--- a/template/topicApp/topic.list.htm
+++ b/template/topicApp/topic.list.htm
@@ -24,7 +24,7 @@
 <body class="categoryApp" i="<!--{$iCMS.APP.NAME}-->">
     <!--{include file="./header.htm"}-->
     <div class="body clearfix ">
-        <div class="body-wrap r5">
+        <div class="body-wrap r3">
             <div class="main-col">
                 <div class="tabs-wrap">
                     <div class="tabs-head">
@@ -145,7 +145,7 @@
                 <div class="clearfix"></div>
                 <div class="mod-box pictxt">
                     <div class="mod-title">
-                        <h3 class="mod-txt">图文推荐</h3>
+                        <h3 class="mod-txt">Рекомендуем картинки</h3>
                     </div>
                     <div class="mod-content">
                         <!--{iCMS:topic:list loop="true" pic="true" sub="all" row="8" cid="$category.cid"}-->
